# zignal

./: CMakeLists.txt  README.md  TODO.md
boost/flowz/: demangle.h  flowz.hpp
experimental_steps/: callable_decltype.hpp  delay_expression.cpp  demangle.h  enumerate_placeholder.cpp  eval_as_transform.cpp  eval_with_node_state.cpp  flowz2.cpp  lambda_with_delay.cpp  max_int_in_expr.cpp  meta.h  meta.test.cpp  multi_wires_feedback.cpp  multi_wires_with_parallel_and_delay.cpp  multi_wires_with_parallel_boxes_without_state.cpp  multi_wires_without_state.cpp  parameter_dag.cpp  part_copy_expr.cpp  proto_lambda_with_transform_and_curry.cpp  tuple_tools.hpp  tuprix.cpp  wires_mono_only.cpp  wires_mono_working.cpp
flowz/: README.md  callable_decltype.hpp  demangle.h  flowz.hpp  tuple_tools.hpp
reactive_equations/: README.md  meta.h  meta.test.cpp  parameter_dag.cpp  reactive_equation.cpp  reactive_equations.comp.cpp  reactive_equations.playground.cpp  reactive_expressions.hpp  reactive_expressions.test.cpp  reactive_filter_coeff.cpp  update_demo.cpp
test/: benchmark.cpp  tests.cpp
